--- a/package.json
+++ b/package.json
@@ -8,12 +8,32 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@freakycoder/react-native-helpers": "^1.0.1",
+    "@freakycoder/react-native-material-textfield": "^1.0.0",
+    "@react-native-community/checkbox": "^0.5.7",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-picker/picker": "1.9.2",
+    "@react-navigation/native": "^5.8.10",
+    "@react-navigation/stack": "^5.12.8",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-date-picker": "^3.2.9",
+    "react-native-dotenv": "^2.5.3",
+    "react-native-dropdown-picker": "^3.7.8",
+    "react-native-floating-label-input": "^1.3.0",
+    "react-native-gesture-handler": "~1.8.0",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "~2.15.0",
+    "react-native-simple-toast": "^1.1.3",
+    "react-native-spinkit": "^1.5.1",
+    "react-native-web": "~0.13.12",
+    "react-number-format": "^4.4.3",
+    "tslib": "^2.0.3",
+    "@react-native-community/datetimepicker": "3.0.4"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
