--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "lib": ["dom", "esnext"],
     "moduleResolution": "node",
     "noEmit": true,
+    "typeRoots": ["./types"],
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "strict": true
