--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@react-native-picker/picker": "1.9.2",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
+    "@types/uuid": "^8.3.3",
+    "axios": "^0.24.0",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
@@ -33,7 +35,8 @@
     "react-native-spinkit": "^1.5.1",
     "react-native-web": "~0.13.12",
     "react-number-format": "^4.4.3",
-    "tslib": "^2.0.3"
+    "tslib": "^2.0.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
