--- a/package.json
+++ b/package.json
@@ -11,39 +11,39 @@
     "@freakycoder/react-native-helpers": "^1.0.1",
     "@freakycoder/react-native-material-textfield": "^1.0.0",
     "@react-native-community/checkbox": "^0.5.7",
-    "@react-native-community/datetimepicker": "3.0.4",
+    "@react-native-community/datetimepicker": "3.5.2",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-picker/picker": "1.9.2",
+    "@react-native-picker/picker": "2.1.0",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "@types/uuid": "^8.3.3",
     "axios": "^0.24.0",
-    "expo": "~40.0.0",
-    "expo-status-bar": "~1.0.3",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "expo": "^43.0.0",
+    "expo-status-bar": "~1.1.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.3",
     "react-native-date-picker": "^3.2.9",
     "react-native-dotenv": "^2.5.3",
     "react-native-dropdown-picker": "^3.7.8",
     "react-native-floating-label-input": "^1.3.7",
-    "react-native-gesture-handler": "~1.8.0",
-    "react-native-reanimated": "~2.0.0",
-    "react-native-safe-area-context": "3.1.9",
-    "react-native-screens": "~2.15.0",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.8.0",
     "react-native-simple-toast": "^1.1.3",
     "react-native-spinkit": "^1.5.1",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "0.17.1",
     "react-number-format": "^4.4.3",
     "tslib": "^2.0.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
-    "@types/react": "~16.9.35",
-    "@types/react-dom": "~16.9.8",
-    "@types/react-native": "~0.63.2",
-    "typescript": "~4.0.0"
+    "@babel/core": "^7.12.9",
+    "@types/react": "~17.0.21",
+    "@types/react-dom": "~17.0.9",
+    "@types/react-native": "~0.64.12",
+    "typescript": "~4.3.5"
   },
   "private": true
 }
