--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-dropdown-picker": "^3.7.8",
     "react-native-floating-label-input": "^1.3.7",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-get-random-values": "^1.7.2",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
