--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,15 +38,15 @@ lint:types:
   script:
     - yarn types-check
 
-# tests:unit:
-#   stage: test
-#   only:
-#     - merge_requests
-#   except:
-#     variables:
-#       - $CI_COMMIT_REF_NAME =~ /^master/
-#   script:
-#     - yarn tests --silent
+tests:unit:
+  stage: test
+  only:
+    - merge_requests
+  except:
+    variables:
+      - $CI_COMMIT_REF_NAME =~ /^master/
+  script:
+    - yarn test
 
 # tests:coverage:
 #   stage: test
