--- a/package.json
+++ b/package.json
@@ -9,7 +9,18 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
+    "test": "jest",
+    "test-coverage": "jest --coverage",
     "eject": "expo eject"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+    ],
+    "setupFiles": [
+        "./setup_tests.ts"
+    ]
   },
   "dependencies": {
     "@freakycoder/react-native-helpers": "^1.0.1",
@@ -24,6 +35,8 @@
     "axios": "^0.24.0",
     "expo": "^43.0.0",
     "expo-status-bar": "~1.1.0",
+    "jest": "^27.4.7",
+    "jest-expo": "~43.0.1",
     "prettier": "^2.5.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -46,13 +59,17 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.9",
     "@types/react": "~17.0.21",
     "@types/react-dom": "~17.0.9",
     "@types/react-native": "~0.64.12",
+    "@types/react-test-renderer": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
     "eslint": "^8.5.0",
     "eslint-plugin-react": "^7.28.0",
+    "react-test-renderer": "17",
     "typescript": "~4.3.5"
   },
   "private": true
