--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,22 +31,22 @@ lint:code-formatter:
   script:
     - yarn code-formatter-check
 
-lint:types:
-  stage: lint
-  only:
-    - merge_requests
-  script:
-    - yarn types-check
+#lint:types:
+#  stage: lint
+#  only:
+#    - merge_requests
+#  script:
+#    - yarn types-check
 
-# tests:unit:
-#   stage: test
-#   only:
-#     - merge_requests
-#   except:
-#     variables:
-#       - $CI_COMMIT_REF_NAME =~ /^master/
-#   script:
-#     - yarn tests --silent
+#tests:unit:
+#  stage: test
+#  only:
+#    - merge_requests
+#  except:
+#    variables:
+#      - $CI_COMMIT_REF_NAME =~ /^master/
+#  script:
+#    - yarn test
 
 # tests:coverage:
 #   stage: test
