Finishing all screens other than price_view

--- a/package.json
+++ b/package.json
@@ -19,13 +19,12 @@
       "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
     ],
     "setupFiles": [
-        "./setup_tests.ts"
+      "./setup_tests.ts"
     ]
   },
   "dependencies": {
     "@freakycoder/react-native-helpers": "^1.0.1",
     "@freakycoder/react-native-material-textfield": "^1.0.0",
-    "@react-native-community/checkbox": "^0.5.7",
     "@react-native-community/datetimepicker": "3.5.2",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-picker/picker": "2.1.0",
@@ -34,6 +33,7 @@
     "@types/uuid": "^8.3.3",
     "axios": "^0.24.0",
     "expo": "^43.0.0",
+    "expo-checkbox": "^2.0.0",
     "expo-status-bar": "~1.1.0",
     "jest": "^27.4.7",
     "jest-expo": "~43.0.1",
