--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -6,10 +6,9 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Lint
-      uses: ./.github/actions/yarn
-      run: yarn lint
+      - uses: actions/checkout@v2
+      - uses: ./.github/actions/yarn
+      - run: yarn lint
 
   lint_code_formatter:
     runs-on: ubuntu-latest
